# snt

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  init.lua  snt.1  snt.bc  snt.lua  sntd  sntd.service
.github/workflows/: Android.yml  main.yml
client/: snt-client.cpp  snt.1  snt.bc  sntd  sntd.service
core/: CMakeLists.txt  SntBitEncoding.hpp  SntCompression.hpp  SntEncryption.hpp  snt_bitencoding.c  snt_bitencoding.h  snt_compression.c  snt_compression.h  snt_def.h  snt_encryption.h  snt_log.h
docs/: conf.py  index.rst
include/: snt.h  snt_benchmark.h  snt_compression.h  snt_debug.h  snt_def.h  snt_delta.h  snt_dh.h  snt_encryption.h  snt_hash.h  snt_log.h  snt_parser.h  snt_pool.h  snt_protocol.h  snt_protocol_func.h  snt_rand.h  snt_schd.h  snt_time.h  snt_utility.h
negotiation/: CMakeLists.txt
protocol/: CMakeLists.txt  snt-protocol.h  snt_crc.h
protocol/hpp/: snt-protocol.hpp
src/: benchmark.c  compression.c  debug.c  delta.c  dh.c  encryption.c  hash.c  log.c  main.c  parser.c  pool.c  protocol.c  protocol_func.c  rand.c  schd.c  snt.c  snt_log.c  time.c  utility.c
test/: CMakeLists.txt  snt_bit_encoding_test.cpp  snt_protocol_test.cpp
