# Define all file lists.
FILE(GLOB SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
FILE(GLOB HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_LIBRARY(snt-core ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(snt-core m ${OPENSSL_CRYPTO_LIBRARY} lz4 pthread ${ZLIB_LIBRARIES} ${OPENSSL_SSL_LIBRARY} bz2)
TARGET_INCLUDE_DIRECTORIES(snt-core PRIVATE  ${ZIP_INCLUDE_DIRS} PUBLIC
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
		$<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
