
FIND_PACKAGE(GTest REQUIRED)
IF(GTEST_FOUND)
	MESSAGE(STATUS "Gtest found: ${GTEST_BOTH_LIBRARIES}")
ELSE()
	MESSAGE(ERROR "Gtest is required in order to compile and run the tests")
ENDIF()


# Source files.
FILE(GLOB SOURCE_FILES 	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(snt-assert ${SOURCE_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(snt-assert ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} snt-core-protocol)
TARGET_INCLUDE_DIRECTORIES(snt-assert PRIVATE ${GTEST_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
ADD_DEPENDENCIES(snt-assert snt-core-protocol)

INSTALL(TARGETS snt-assert DESTINATION bin)
ADD_TEST(NAME assert-functionality
		COMMAND snt-assert
		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
